--- a/package.json
+++ b/package.json
@@ -23,14 +23,14 @@
   },
   "peerDependencies": {
     "react": "16.5.0",
-    "konva": "^2.0.0",
+    "konva": "1STi/konva",
     "react-dom": "16.5.0"
   },
   "devDependencies": {
     "chai": "^4.1.2",
     "enzyme": "^3.6.0",
     "enzyme-adapter-react-16": "^1.5.0",
-    "konva": "^2.3.0",
+    "konva": "1STi/konva",
     "sinon": "^6.2.0",
     "nwb": "^0.23.0",
     "react": "16.5.0",
